Add Rainbow Six collectables and registry
Introduces Rainbow Six Operator collectables and their registry. Refactors MinecraftMobCollector to CollectableGameCollector and adds a registry for game collectors. Updates related classes to support new collectable types and improves emoji mapping for Rainbow Six operators.